--- a/app/src/main/res/layout/virtual_particles.xml
+++ b/app/src/main/res/layout/virtual_particles.xml
@@ -5,6 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <View
+        android:id="@+id/topSpace"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="5dp"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="25dp"
+        android:id="@+id/VP_count"
+        android:text="VP count PLACEHOLDER"
+        app:layout_constraintTop_toBottomOf="@id/topSpace"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textAlignment="center"
+        android:fontFamily="sans-serif"
+
+        />
     <Button
         android:id="@+id/clickMe_vp"
         android:layout_width="128dp"
@@ -13,7 +33,8 @@
         android:backgroundTint="@color/dark_cyan0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/VP_count" />
+
 <!--        app:layout_constraintBottom_toTopOf="@+id/dateTextView"-->
 
 
