--- a/app/src/main/res/layout/virtual_particles.xml
+++ b/app/src/main/res/layout/virtual_particles.xml
@@ -13,6 +13,15 @@
         android:layout_height="5dp"
         app:layout_constraintTop_toTopOf="parent"
         />
+    <View
+        android:layout_width="1dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="parent"
+        android:id="@+id/centerView"
+        />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="25dp"
@@ -20,10 +29,21 @@
         android:text="VP count PLACEHOLDER"
         app:layout_constraintTop_toBottomOf="@id/topSpace"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/centerView"
         android:textAlignment="center"
         android:fontFamily="sans-serif"
 
+
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="25dp"
+        android:id="@+id/VC_count"
+        android:text="VC count PLACEHOLDER"
+        app:layout_constraintTop_toBottomOf="@id/topSpace"
+        app:layout_constraintBottom_toTopOf="@id/clickMe_vp"
+        app:layout_constraintStart_toEndOf="@id/centerView"
+        app:layout_constraintEnd_toEndOf="parent"
         />
     <Button
         android:id="@+id/clickMe_vp"
@@ -34,6 +54,17 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/VP_count" />
+    <Button
+        android:id="@+id/VP_delayUpgrade"
+        android:layout_width="128dp"
+        android:layout_height="100dp"
+        android:text="@string/VPUpdate_delay"
+        android:backgroundTint="@color/dark_cyan0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="@id/centerView"
+        app:layout_constraintTop_toBottomOf="@id/clickMe_vp"
+        android:textSize="10dp"
+        />
 
 <!--        app:layout_constraintBottom_toTopOf="@+id/dateTextView"-->
 
