--- a/app/src/main/res/layout/virtual_particles.xml
+++ b/app/src/main/res/layout/virtual_particles.xml
@@ -65,6 +65,28 @@
         app:layout_constraintTop_toBottomOf="@id/clickMe_vp"
         android:textSize="10dp"
         />
+    <Button
+        android:id="@+id/VP_dvUpgrade"
+        android:layout_width="128dp"
+        android:layout_height="100dp"
+        android:text="@string/VPUpgrade_divison"
+        android:backgroundTint="@color/dark_cyan0"
+        app:layout_constraintLeft_toRightOf="@id/centerView"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/clickMe_vp"
+        android:textSize="10dp"
+        />
+    <Button
+        android:id="@+id/VP_cpUpgrade"
+        android:layout_width="128dp"
+        android:layout_height="100dp"
+        android:text="@string/VPUpgrade_cp"
+        android:backgroundTint="@color/dark_cyan0"
+        app:layout_constraintLeft_toRightOf="@id/centerView"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/VP_dvUpgrade"
+        android:textSize="10dp"
+        />
 
 <!--        app:layout_constraintBottom_toTopOf="@+id/dateTextView"-->
 
